[package]
name = "pets-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
# 读取写入配置文件
system-config = "0.1.2"
lazy_static = "1.4.0"
# 引入到本地，需要修改部分源码 path="../../tauri/tauri/core/tauri"
tauri = { version = "1.3.0", features = ["dialog-confirm", "dialog-open", "fs-read-dir", "fs-read-file", "macos-private-api", "path-all", "protocol-all", "system-tray", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1"
percent-encoding = "2.2.0"
[dependencies.windows]
version = "0.39"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
